# School-work-objectives

./: .breakpoints  README.md  _crawled.txt  change_logs.txt  crawl.py  crawl.txt  error.txt  errors.py  jsontxtup.py  loc.txt  main.py  pyproject.toml  update.txt
change/: change.json  changelog.py
extra/: overdone.py  overdone1.py
extras/: fish_tank_volume_extra.py  overdone1.py
obj1/: carpet.py  charactersproblem.py  circle.py  dice.py  energybill.py  fishtankvolume.py  magnification.py  tempconvert.py
obj2/: day.py  examgrade.py  nitrate.py  nitrate1.py
obj3/: clamp.py  divisible.py  electriccarproblem.py  polyhedraldice.py
obj4/: airticket.py  emailcheck.py  fullName.py  inventoryproblem.py  letter-converter.py
objective1/: carpet_cost.py  characters.py  circle_properties.py  dice_face_5.py  energy_bill_calculator.py  fish_tank_volume.py  magnification.py  temperature_convert.py
objective2/: day_format.py  exam_grade.py  nitrate.py
objective3/: clamp.py  clamp_extra.py  divisible.py  electric_car.py  polyhedral_dice.py
objective4/: ASCII_to_EBCDIC.py  airline_ticket.py  inventory.py  name_seperator.py  valid_address.py
objective5/: cassini.py  fizz_buzz.py  prime_number.py  prime_numers_2.py  scrabble.py
objective6/: car_value.py  cashpoint.py  den_to_bin.py  discount_counter.py  happy_numbers.py  lottery.py  squareroot.py
objective7/: adder.py  car_park.py  conversion.py  password.py  rock_paper_sizzors.py
old_programs/: explanation_for_old.py  loc.txt  main_old.py  main_oldv1.py  main_oldv1_expanded.py  main_oldv2.py  main_oldv3.py  (+1 more)
(+56 files in other folders)
